[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/Comet.png" type="Texture" id=1]
[ext_resource path="res://ui/Background.png" type="Texture" id=2]
[ext_resource path="res://themes/theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/SceneTransitionFade.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 800.0
texture = ExtResource( 2 )
expand = true

[node name="HBoxContainer" type="HSplitContainer" parent="."]
margin_right = 1024.0
margin_bottom = 800.0
collapsed = true
dragger_visibility = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_right = 512.0
margin_bottom = 800.0

[node name="Comet" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_top = 144.0
margin_right = 512.0
margin_bottom = 656.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartResume" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 94.0
theme = ExtResource( 3 )
text = "Start"
flat = true

[node name="Instructions" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 512.0
margin_bottom = 192.0
theme = ExtResource( 3 )
text = "Instructions"
flat = true

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 512.0
margin_bottom = 290.0
theme = ExtResource( 3 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 512.0
margin_bottom = 552.0
theme = ExtResource( 3 )
text = "

Comet Journal"
align = 1
valign = 1

[node name="SceneTransitionFade" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 800.0
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartResume" to="." method="_on_StartResume_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
